public/css/app.css
body {
    background: url(/img/bg.png);
}
.main {
    padding-top: 20px;
    background: #fff;
}
.map {
    height: 450px;
}
.attribution {
    line-height: 2;
    font-size: 0.8em;
}
.leaflet-container {
    background: white;
}

/* Customize marker cluster display */
.marker-cluster-small {
    width: 24px !important;
    height: 24px !important;
    margin-left: -12px !important;
    margin-top: -12px !important;
}
.marker-cluster-small div {
    width: 18px;
    height: 18px;
    margin-left: 3px;
    margin-top: 3px;
}
.marker-cluster-small span {
    line-height: 18px;
}
.marker-cluster-medium {
    width: 32px !important;
    height: 32px !important;
    margin-left: -16px !important;
    margin-top: -16px !important;
}
.marker-cluster-medium div {
    width: 24px;
    height: 24px;
    margin-left: 4px;
    margin-top: 4px;
}
.marker-cluster-medium span {
    line-height: 24px;
}
.marker-cluster span {
    color:white;
}
.point-icon {
    width: 18px;
    height: 18px;
    border-radius: 9px;
}
.point-icon div {
    border-radius: 6px;
    width: 12px;
    height: 12px;
    margin-left: 3px;
    margin-top: 3px;
}

.point-icon div,
.marker-cluster div {
    background-color: rgba(120, 0, 0, 0.8);
}
.point-icon,
.marker-cluster {
    background-color: rgba(215, 50, 50, 0.7);
}
.point-icon.highlighted {
    background-color: rgba(255, 180, 0, 0.7);
}
.point-icon.highlighted div {
    background-color: rgba(255, 140, 0, 0.8);
}
.leaflet-container a.leaflet-popup-close-button {
    display: none;
}
.leaflet-popup-content {
    margin: 5px 12px;
}
.leaflet-popup-content-wrapper {
    -webkit-border-radius: 6px;
    border-radius: 6px;
}
.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
    color: #ddd;
    background-color: rgba(20, 20, 20, 0.95);
}

.point-user {
    cursor: pointer;
}

.leaflet-control-minimap {
    border:1px solid #222;
    box-shadow: 0 1px 7px #000;
    -moz-border-radius: 0;
    -webkit-border-radius: 0;
    border-radius: 0;
}
a.external-link {
    width: 16px;
    height: 16px;
    display: inline-block;
    background: transparent url(../img/external.gif) no-repeat scroll;
}

